--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://images.freeimages.com/fic/images/icons/1243/hello_kitty/256/bow_pink.png?fmt=webp&w=500" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shop Mart</title>
   </head>
